# quantum-stock

./: .env.example  .gitignore  AGENTS.md  README.md  THESIS.md
backend/: main.py  pyproject.toml  seed.py
backend/app/: config.py  database.py  main.py
backend/app/auth/: models.py  router.py  utils.py
backend/app/concalls/: gemini_analyzer.py  llm_analyzer.py  models.py  pdf_parser.py  router.py  spacy_preprocessor.py
backend/app/news/: router.py  service.py
backend/app/notes/: router.py
backend/app/stocks/: models.py  router.py  scraper_stub.py  yfinance_service.py
backend/app/valuation/: calculator.py  models.py  router.py
backend/docs/: ai-calls-and-tokens.md  ai-context.md  api-contracts.md  architecture.md  gemini-migration-plan.md
backend/docs/features/: concall-analysis.md  explore-stocks.md  guidance-tracker.md  session-notebook.md  stock-classification.md  valuation.md
backend/docs/setup/: local-development.md
backend/docs/testing/: accuracy-testing.md
backend/docs/user-guide/: README.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/explore/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/concalls/: analysis-card.tsx  analysis-drawer.tsx  credibility-badge.tsx  financial-kpi-chart.tsx  guidance-trend-chart.tsx  guidance-vs-actuals-chart.tsx  pdf-dropzone.tsx  (+1 more)
frontend/src/hooks/: use-auth.ts  use-chart-theme.ts  use-stock.ts
frontend/src/lib/: api.ts  constants.ts
(+12 files in other folders)
